half rewritten to 1.18.2. still broken